clusters/home/o11y/grafana/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: o11y-grafana
  labels:
    name: o11y-grafana
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
