clusters/home/o11y/grafana/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: o11y-grafana
  annotations:
    tailscale.com/funnel: "false" # Set to "true" to expose publicly via Tailscale Funnel
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: grafana
      port:
        number: 80
  tls:
    - hosts:
        - grafana
